--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Deivisson | Sociais</title>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <title>Sociais Network</title>
 </head>
 
 
 <body>
     <div id="container">
         <header>
-            <img src="./img/321945727_701348721696202_3977365464620526759_n.jpg" alt="foto-perfil">
+            <img src="./img/321945727_701348721696202_3977365464620526759_n.jpg" alt="foto-perfil" class="foto-perfil">
             <h2>"A paciência é um elemento fundamental do sucesso."</h2>
             <p>Bill Gates</p>
         </header>
@@ -25,10 +29,28 @@
                         <h4>Instagram</h4>
                     </div>
                 </a>
-
-                <a href=""></a>
+            </div>
+            <div class="containerMain">
+                <a href="https://github.com/Deivisson-dev" target="_blank">
+                    <div id="div-github">
+                        <img src="./img/github.png" alt="icon-github" class="icon-github">
+                        <h4>Github</h4>
+                    </div>
+                </a>
+            </div>
+            <div class="containerMain">
+                <a href="https://www.linkedin.com/in/darson%E6%96%87-rocha-51a23720a/" target="_blank">
+                    <div id="div-linkedin">
+                        <img src="./img/linkedin.png" alt="icon-linkedin" class="icon-linkedin">
+                        <h4>LinkedIn</h4>
+                    </div>
+                </a>
             </div>
         </main>
+        <footer>
+            <img src="./img/notebook-1.png" alt="img-coffe" class="img-coffe">
+            <h3>Desenvolvido por <br> <a href="https://www.instagram.com/deivisson.dev/" class="linkPerfil">Deivisson_DEV</a></h3><br>
+        </footer>
     </div>
 </body>
 </html>
