--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="container">
         <header>
-            <img src="./img/321945727_701348721696202_3977365464620526759_n.jpg" alt="foto-perfil" class="foto-perfil">
+            <img src="./img/perfil.jpg" alt="foto-perfil" class="foto-perfil">
             <h2>"A paciência é um elemento fundamental do sucesso."</h2>
             <p>Bill Gates</p>
         </header>
